tests/positive/RecordProjectionSignature.juvix
module RecordProjectionSignature;

import Stdlib.Data.Nat open;

trait
type R A :=
  mkR@{
    fun : (n : A) -> A;
  };

f {{R Nat}} : Nat :=
  R.fun@{
    n := 1;
  };
