tests/negative/UnexpectedFieldUpdate.juvix
module UnexpectedFieldUpdate;

type T := t;

open T;

type R := mkR {
 r : T;
};

open R;

f : R := (mkR t) @R{x := 1};
